--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
         "dev": "vite",
         "test": "echo TODO: Add test script",
         "build": "tsc && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "prepare": "husky install"
+    },
+    "lint-staged": {
+        "**/*": "prettier --write --ignore-unknown"
     },
     "dependencies": {
         "firebase": "^9.8.2",
@@ -19,6 +23,9 @@
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "@vitejs/plugin-react": "^1.3.0",
+        "husky": "^8.0.1",
+        "lint-staged": "^12.4.2",
+        "prettier": "2.6.2",
         "sass": "^1.52.1",
         "typescript": "^4.6.3",
         "vite": "^2.9.9"
