feat: add markdown parser
Developers can now parse markdown to an object that is ready to be saved to the database

BA-6 #resolve

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,14 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+cypress/downloads
+cypress/screenshots
+cypress/videos
 
 node_modules
 dist
+temp
+tmp
 dist-ssr
 *.local
 
