--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "scripts": {
         "dev": "vite",
         "test": "echo TODO: Add test script",
+        "cy:open": "cypress open",
+        "cy:run": "cypress run",
         "build": "tsc && vite build",
         "preview": "vite preview",
         "prepare": "husky install"
@@ -14,15 +16,19 @@
     },
     "dependencies": {
         "firebase": "^9.8.2",
+        "node-emoji": "^1.11.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.3.0",
         "scss-reset": "^1.2.2"
     },
     "devDependencies": {
+        "@cypress/vite-dev-server": "^2.2.3",
+        "@types/node-emoji": "^1.8.1",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "@vitejs/plugin-react": "^1.3.0",
+        "cypress": "^9.7.0",
         "husky": "^8.0.1",
         "lint-staged": "^12.4.2",
         "prettier": "2.6.2",
