--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
             "@/*": ["src/*"]
         }
     },
-    "include": ["src"],
+    "include": ["src", "cypress/integration/markdown.spec.ts"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
