feat: add blog querying possibilities
Users can now query blog posts

BA-5 #resolve

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,11 +2,13 @@
     "compilerOptions": {
         "target": "es5",
         "lib": ["es5", "dom"],
-        "types": ["cypress"],
-        "baseUrl": "../",
+        "types": ["cypress", "node"],
+        "baseUrl": ".",
         "paths": {
-            "@/*": ["src/*"]
-        }
+            "@/*": ["../src/*"],
+            "#/*": ["./*"]
+        },
+        "moduleResolution": "node"
     },
     "include": ["**/*.ts"]
 }
