--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,6 @@ VITE_PROJECT_ID="lorem_ipsum"
 VITE_STORAGE_BUCKET="lorem_ipsum"
 VITE_MESSAGING_SENDER_ID="lorem_ipsum"
 VITE_APP_ID="lorem_ipsum"
+
+VITE_FIRESTORE_EMULATOR_HOST="localhost"
+VITE_FIRESTORE_EMULATOR_PORT=6000
