--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
     "private": true,
     "version": "0.1.0",
     "scripts": {
-        "dev": "vite",
+        "dev": "npm-run-all --parallel --print-label dev-*",
+        "dev-client": "vite",
+        "dev-db": "firebase emulators:start",
         "test": "echo TODO: Add test script",
-        "cy:open": "cypress open",
-        "cy:run": "cypress run",
+        "test:e2e": "npm-run-all --parallel --print-label dev-* test-e2e",
+        "test:spec": "npm-run-all --parallel --print-label dev-* test-e2e",
+        "test-e2e": "cypress open --e2e --detached --browser chromium",
+        "test-spec": "cypress open --component --detached --browser chromium",
         "build": "tsc && vite build",
         "preview": "vite preview",
         "prepare": "husky install"
@@ -20,20 +24,24 @@
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.3.0",
-        "scss-reset": "^1.2.2"
+        "scss-reset": "^1.2.2",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
-        "@cypress/vite-dev-server": "^2.2.3",
         "@types/node-emoji": "^1.8.1",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "@types/uuid": "^8.3.4",
         "@vitejs/plugin-react": "^1.3.0",
-        "cypress": "^9.7.0",
+        "cypress": "^10.2.0",
+        "dotenv": "^16.0.1",
         "husky": "^8.0.1",
         "lint-staged": "^12.4.2",
+        "npm-run-all": "^4.1.5",
         "prettier": "2.6.2",
         "sass": "^1.52.1",
         "typescript": "^4.6.3",
-        "vite": "^2.9.9"
+        "vite": "^2.9.9",
+        "vite-plugin-environment": "^1.1.1"
     }
 }
